Fix module accessibility issues and update project structure
- Added missing 'requires transitive javafx.graphics' in
module-info.java to ensure JavaFX modules are accessible.
- Updated project dependencies for proper JavaFX module handling.
- Refactored collision handling to use Collectors for destroyed actor
removal.
- Improved game dynamics with automatic difficulty scaling based on kill
count.
- Enhanced level transition handling using StringProperty for level name
changes.